--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
 
     // Một số lỗi Firebase cần lib này
     implementation 'com.google.firebase:protolite-well-known-types:18.0.1'
-
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
     // Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
