--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <!-- Exact alarm (Android 12+) -->
+    <!-- Exact alarm (Android 12+) - Cần thiết để báo thức chạy đúng giờ chính xác -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+
+    <!-- QUYỀN QUAN TRỌNG CẦN THÊM (Android 13+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <!-- FCM -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
